{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 55,
  "lineage": "4e0cbfd3-c934-2946-79ba-9dd70b776034",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/networkInterfaces/CMC-ECA01-PREP-NIC",
            "internal_domain_name_suffix": "fdhf4mnhtuzubltnlqevy4qhqg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfiguration",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/publicIPAddresses/CMC-ECA01-PREP-Publicip",
                "subnet_id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/virtualNetworks/CMC-ECA01-PREP-VNET/subnets/CMC-ECA01-PREP-SNET"
              }
            ],
            "location": "eastus",
            "name": "CMC-ECA01-PREP-NIC",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "CMC-ECA01-PREP-csql-rg"
          },
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nicass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/networkInterfaces/CMC-ECA01-PREP-NIC|/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/networkSecurityGroups/CMC-ECA01-PREP-NSG",
            "network_interface_id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/networkInterfaces/CMC-ECA01-PREP-NIC",
            "network_security_group_id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/networkSecurityGroups/CMC-ECA01-PREP-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.NIC",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/networkSecurityGroups/CMC-ECA01-PREP-NSG",
            "location": "eastus",
            "name": "CMC-ECA01-PREP-NSG",
            "resource_group_name": "CMC-ECA01-PREP-csql-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "MSSQLRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/networkSecurityGroups/CMC-ECA01-PREP-NSG/securityRules/MSSQLRule",
            "name": "MSSQLRule",
            "network_security_group_name": "CMC-ECA01-PREP-NSG",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "CMC-ECA01-PREP-csql-rg",
            "source_address_prefix": "167.220.255.0/25",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "RDPRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/networkSecurityGroups/CMC-ECA01-PREP-NSG/securityRules/RDPRule",
            "name": "RDPRule",
            "network_security_group_name": "CMC-ECA01-PREP-NSG",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "CMC-ECA01-PREP-csql-rg",
            "source_address_prefix": "167.220.255.0/25",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/publicIPAddresses/CMC-ECA01-PREP-Publicip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "CMC-ECA01-PREP-Publicip",
            "resource_group_name": "CMC-ECA01-PREP-csql-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.0/16",
            "address_prefixes": [
              "10.2.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/virtualNetworks/CMC-ECA01-PREP-VNET/subnets/CMC-ECA01-PREP-SNET",
            "name": "CMC-ECA01-PREP-SNET",
            "resource_group_name": "CMC-ECA01-PREP-csql-rg",
            "virtual_network_name": "CMC-ECA01-PREP-VNET"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/virtualNetworks/CMC-ECA01-PREP-VNET/subnets/CMC-ECA01-PREP-SNET",
            "network_security_group_id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/networkSecurityGroups/CMC-ECA01-PREP-NSG",
            "subnet_id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/virtualNetworks/CMC-ECA01-PREP-VNET/subnets/CMC-ECA01-PREP-SNET"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "guid": "315fce28-9da7-4033-ae6d-5c095c7a0786",
            "id": "/subscriptions/c90e3d0d-7080-4628-b93b-0107fa7a76e7/resourceGroups/CMC-ECA01-PREP-csql-rg/providers/Microsoft.Network/virtualNetworks/CMC-ECA01-PREP-VNET",
            "location": "eastus",
            "name": "CMC-ECA01-PREP-VNET",
            "resource_group_name": "CMC-ECA01-PREP-csql-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}